# Claude-SkillXfer

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  setup.py
claude_skillxfer/: __init__.py  cli.py
claude_skillxfer/cli_adapters/: __init__.py  antigravity.py  base.py  codex.py  cursor.py  droid.py  gemini.py  opencode.py
